--- a/web_site/service/static/service/css/service.css
+++ b/web_site/service/static/service/css/service.css
@@ -13,7 +13,6 @@ html{
 body{
     background-color: #0c0c0d;
     color: white;
-    height: 1500px;
 }
 
 a{
@@ -21,11 +20,11 @@ a{
     color: white;
 }
 
-#haircut_shave_table .section-title{
+#data-table .section-title{
     padding-top: 130px;
 }
 
-#haircut_shave_table .styled-table{
+#data-table .styled-table{
     margin: 0 auto;
     margin-top: 100px;
 }
